infrastructure/kiali/config/kustomize/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/dataplane-mode: ambient
  name: kiali
