infrastructure/kiali/config/kustomize/base/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns/enabled: "true"
  name: kiali
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal-private-gateway
    namespace: istio-internal-private
    sectionName: https
  hostnames:
  - kiali.dev.private.aliktb.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kiali
      port: 20001
